# radio-advertisement-cut

./: README.md
Multi_radio_pull_C/: download.h  main.cpp  mysocket.h  mysqlCon.h  mysqlCon2.h  programlist.h  radioer.h
Multi_radio_pull_C/1300/: config.txt
Multi_radio_pull_C/1300/list/: Sun.txt
Multi_radio_pull_C/beijing/: config.txt
Multi_radio_pull_C/beijing/list/: Fri.txt  Mon.txt  Thur.txt  Tues.txt
Multi_radio_pull_C/taiwan/: config.txt
Multi_radio_pull_C/taiwan/list/: Sat.txt  Wed.txt
Multi_radio_pull_py/: download.py  hparams.py  main.py  program_set.py
Multi_radio_pull_py/1300/list/: Fri.txt  Mon.txt  Sat.txt  Sun.txt  Thur.txt  Tues.txt  Wed.txt
Multi_radio_pull_py/beijing/list/: Mon.txt
createlabel/: audio.h  librosa.h  main.cpp  math_tool.h  matrix.h
createlabel/label/: label.sln
deladv(PytorchV1.0)/: audio.sln  audio.vcxproj
deladv(PytorchV1.0)/models/: init.pb  model.pt  pred.pb
deladv(PytorchV1.0)/src/: CMakeLists.txt  CMakeLists.txt_V1.1  adv_verify.h  main.cpp
deladv(PytorchV1.0)/src/mel/: mel.h
deladv(PytorchV1.0)/src/utils/: dirent.h  torch_net.h  utils.h
deladv(PytorchV1.3)/: adv.sln  adv.vcxproj  adv.vcxproj.filters
deladv(PytorchV1.3)/src/: CMakeLists.txt  adv_verify.h  main.cpp
deladv(PytorchV1.3)/src/librosa/: audio.h  librosa.h  matrix.h
deladv(PytorchV1.3)/src/mel/: mel.cpp
deladv(PytorchV1.3)/src/utils/: possion.h  torch_net.h
deladv(pytorch(1.0)/: audio.vcxproj.filters
deladv(pytorch(1.0)/src/librosa/: audio.h  librosa.h  main.cpp  matrix.h
deladv(pytorch(1.0)/src/mel/: mel.cpp
deladv(pytorch(1.0)/src/utils/: caffe2_net.h
radio/: CMakeLists.txt  bakHandle.sh
radio/src/: main.cpp  mysocket.h  mysqlCon.h  programlist.h
train net/: hparams.py  main.py
train net/dataset/: dataset.py
train net/net/: models.py  net.py
train net/trainer/: onnx_proc.py  optim_schedule.py  train_proc.py
train net/utils/: audio.py  statistics.py
